CHANGES

20110323 - Add dependency on "parent" for CPANTESTERS

20110320 -  Resolve several open bugs and feature requests:

 1) Allow specifying top-level path to start search for files to test
    (instead of always using ".").

 2) Allow specifying a perltidyrc file to test against.

 3) Allow specifying files or directories to exclude from testing.

 4) Fix so distribution passes its own tidyness tests.

20080429 -  A file is tidy wrt a version of Perl::Tidy
            (even Test::PerlTidy fell prey to this subtle issue)

20070903 -  Added File::Finder as a prereq
            Changed the META.yml file to be valid YAML
            Added a CHANGES file

20070911 -  Changed to Makefile.PL to try to make build more reliable